Adding assets and font

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,19 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Instrument Sans";
+  src: url("../src/assets/fonts/InstrumentSans.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Instrument Sans", Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.05em;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -44,16 +54,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -66,5 +68,17 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (max-height: 1100px) {
+  .checklist-container {
+    max-height: 32.5rem;
+  }
+}
+
+@media (min-height: 1100px) {
+  .checklist-container {
+    max-height: 100vh;
   }
 }
